force-app/main/default/objects/Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Developer assigned to this task</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>