force-app/main/default/objects/Task__c/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <description>Reason why task is blocked</description>
    <label>Blocked Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>