force-app/main/default/objects/Task__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <description>Formula: TRUE if task is overdue</description>
    <label>Is Overdue</label>
    <formula>AND(
    NOT(ISPICKVAL(Status__c, "Completed")),
    Due_Date__c &lt; TODAY()
)</formula>
    <type>Checkbox</type>
</CustomField>