force-app/main/default/objects/Task__c/fields/Pending_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pending_Reason__c</fullName>
    <description>Reason why this task is Pending or Blocked</description>
    <label>Pending / Blocked Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>