force-app/main/default/objects/Task__c/fields/Task_Progress__c.field-meta.xml
<CustomField>
    <fullName>Task_Progress__c</fullName>
    <description>Sum of daily progress entries (auto-calculated)</description>
    <label>Task Progress %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>