force-app/main/default/objects/Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <description>Type of task</description>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
                <default>true</default>
                <label>Development</label>
            </value>
            <value>
                <fullName>Bug Fix</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Code Review</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>