force-app/main/default/objects/Task__c/validationRules/Cannot_Complete_Blocked_Task.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Complete_Blocked_Task</fullName>
    <active>true</active>
    <description>Prevents marking task as complete if it has status Blocked</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "Completed"),
    ISPICKVAL(PRIORVALUE(Status__c), "Blocked"),
    ISCHANGED(Status__c)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Cannot mark blocked task as complete. Please resolve blocking issue first or change status to In Progress.</errorMessage>
</ValidationRule>