force-app/main/default/objects/Task__c/validationRules/Checklist_Required_Before_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Checklist_Required_Before_Complete</fullName>
    <active>true</active>
    <description>Ensures all checklist items are completed before marking task as complete</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "Completed"),
    ISCHANGED(Status__c),
    Checklist_Complete__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>All checklist items must be completed before marking task as complete. Please complete all checklist items first.</errorMessage>
</ValidationRule>