force-app/main/default/objects/Task__c/validationRules/Progress_Cannot_Exceed_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Progress_Cannot_Exceed_100</fullName>
    <active>true</active>
    <description>Ensures task progress percentage does not exceed 100%</description>
    <errorConditionFormula>Task_Progress__c &gt; 100</errorConditionFormula>
    <errorDisplayField>Task_Progress__c</errorDisplayField>
    <errorMessage>Task progress cannot exceed 100%. Please verify your daily progress entries.</errorMessage>
</ValidationRule>